<resources>
    <string name="app_name">Ble</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Connect</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_oclock">OclockActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="once">只响一次</string>
    <string name="everyday">每一天</string>
    <string name="workday">法定工作日</string>
    <string name="holiday">法定节假日</string>
    <string name="weekday">周一 周二 周三 周四 周五</string>
    <string name="custom">自定义</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="on">已开启</string>
    <string name="off">未开启</string>
    <!--0一次，1每天，2法定工作日，3法定家假日，4周一至周五，5自定义-->
    <string name="connecting">正在连接</string>
    <string name="connect_fail">连接失败</string>
    <string name="connect_success">连接成功</string>
    <string name="active_disconnected">停止连接</string>
    <string name="disconnected">停止连接</string>
    <string name="scan">扫描</string>
    <string name="stop">停止</string>
    <string name="please_open_blue">请打开蓝牙</string>
    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="datetime">日期时间</string>
    <string name="automatic_time">自动更新日期时间</string>
    <string name="set_date">设置日期</string>
    <string name="set_time">设置时间</string>
    <string name="hour_24_format">24时制</string>
    <string name="time_zone">时区</string>
    <string name="automatic_time_zone">自动获取时区</string>
    <string name="select_time_zone">选择时区</string>
</resources>
