<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.my.bleoclock.FragmentAnther">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/datetime" />

        <TextView
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic_time" />

        <TextView
            android:id="@+id/fragment_anther_set_date"
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_date" />

        <TextView
            android:id="@+id/fragment_anther_set_time"
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time" />
        <TextView
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hour_24_format" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_zone" />
        <TextView
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic_time_zone" />
        <TextView
            android:id="@+id/fragment_anther_select_time_zone"
            style="@style/Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time_zone" />
    </LinearLayout>

</FrameLayout>
